--- a/firstfile.html
+++ b/firstfile.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>First website</title>
-    <script></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="js/firstfile.js"></script>
 </head>
 <body>
-
+    <p>testing</p>
+    <input type="button" onclick="makeCall()">Make PHP call</input>
 </body>
 </html>
